# pomobuddy

./: .gitignore  colors  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
_bmad-output/implementation-artifacts/: 1-1-initialize-tauri-project-with-react-typescript.md  1-2-configure-development-environment-ui-foundation.md  1-3-implement-timer-state-management-in-rust-backend.md  1-4-create-basic-timer-ui-with-start-pause-stop-controls.md  1-5-implement-focus-to-break-auto-transition.md  1-6-add-native-notifications-for-session-boundaries.md  2-1-implement-system-tray-icon-with-platform-support.md  2-2-create-tray-menu-with-timer-ring-display.md  2-3-add-quick-stats-to-tray-menu.md  2-4-enable-start-stop-session-from-tray-menu.md  2-5-add-main-window-launch-from-tray.md  3-1-implement-session-file-storage-in-rust-backend.md  3-2-track-and-persist-completed-and-interrupted-sessions.md  3-3-create-daily-statistics-view.md  3-4-build-session-history-view.md  3-5-implement-weekly-bar-chart-visualization.md  3-6-add-settings-storage-and-configuration.md  (+18 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  notifications.rs  tray.rs
src-tauri/src/commands/: achievements.rs  app.rs  mod.rs  session.rs  settings.rs  stats.rs  streak.rs  timer.rs
src-tauri/src/state/: mod.rs  timer_state.rs
src-tauri/src/storage/: achievements.rs  mod.rs  recovery.rs  sessions.rs  settings.rs
(+137 files in other folders)
