[package]
name = "test-bmad"
version = "0.1.0"
description = "A cozy focus companion - Pomodoro timer with streaks and achievements"
authors = ["test-bmad"]
edition = "2021"

[lib]
name = "test_bmad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
